# advent-of-code-dan

./: pyproject.toml
aoc_dan/: __init__.py  cli.py  ocr.py  util.py  zgrid.py
aoc_dan/aoc2021/: q01.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py
aoc_dan/aoc2024/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py
