[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-dan"
dynamic = ["version"]
description = "Dan's solutions for https://adventofcode.com/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "advent-of-code-data >= 2.0.0",
    "anytree",
    "bidict",
    "numpy",
    "parse",
    "scipy",
    "sympy",
    "termcolor",
    "fields",
    "networkx",
    "marshmallow",
    "regex",
    "intervaltree",
]

[[project.authors]]
name = "Daniel Dugovic"
email = "ddugovic@users.noreply.github.com"

[project.license]
text = "GPL"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ddugovic/advent-of-code"

[project.scripts]
aocw = "aoc_dan.cli:run_one"
s = "aoc_dan.cli:speedhack"
_set_docstrings = "aoc_dan.util:set_docstrings"
aoc-init = "aoc_dan.util:start"

[project.entry-points."adventofcode.user"]
dan = "aoc_dan:plugin"

[tool.setuptools.dynamic]
version = {attr = "aoc_dan.__version__"}
